Added form validation

--- a/index.html
+++ b/index.html
@@ -22,32 +22,32 @@
                     <div class="formRow">
                         <div class="inputPair">
                             <label for="first_name">First Name</label>
-                            <input type="text" id="first_name" name="first_name">
+                            <input type="text" id="first_name" name="first_name" required>
                         </div>
 
                         <div class="inputPair">
                             <label for="last_name">Last Name</label>
-                            <input type="text" id="last_name" name="last_name">
+                            <input type="text" id="last_name" name="last_name" required>
                         </div>
                     </div>
                     <div class="formRow">
                         <div class="inputPair">
                             <label for="email">Email</label>
-                        <input type="text" id="email" name="email">
+                        <input type="email" id="email" name="email" required>
                         </div>
                         <div class="inputPair">
                             <label for="phone_number">Phone Number</label>
-                            <input type="text" id="phone_number" name="phone_number">
+                            <input type="number" id="phone_number" name="phone_number" minlength="8" required>
                         </div>
                     </div>
                     <div class="formRow">
                         <div class="inputPair">
                             <label for="password">Password</label>
-                            <input type="text" id="password" name="password">
+                            <input type="text" id="password" name="password" required>
                         </div>
                         <div class="inputPair">
                             <label for="confirm_password">Confirm Password</label>
-                            <input type="text" id="confirm_password" name="confirm_password">
+                            <input type="text" id="confirm_password" name="confirm_password" required>
                         </div>
                     </div>
 
